--- a/template/Cargo.toml.tmpl
+++ b/template/Cargo.toml.tmpl
@@ -6,6 +6,7 @@ publish = false
 
 [dependencies]
 polyhorn = "{version}"
+polyhorn-test = "{version}"
 
 [build-dependencies]
 polyhorn-build = "{version}"
